Database insertion server now works with our log dumps.
git-svn-id: file:///var/svn/nexopia/trunk/adblaster@3254 7be605d3-0650-4ba7-bb8c-0af3a60b5258